# llm-usage-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh.md  alembic.ini  glama.json  plan.md  progress.md  pyproject.toml  server.json
.github/workflows/: ci.yml  refresh-pricing.yml
alembic/: env.py
alembic/versions/: 9e3b7a72bd41_cost_usd_to_cost_nano_usd.py
docs/: Provider_Adapter_Reference.md  architecture.md  backlog.md  configuration.md  post_v1_providers.md  spec.md
examples/: spend_comparison_session.md
examples/snippets/servers/: fastmcp_quickstart.py
scripts/: refresh_pricing.sh
src/llm_usage/: __init__.py  __main__.py  bootstrap.py  cli.py  cli_render.py  config.py
src/llm_usage/capture/: __init__.py  _anthropic_common.py  _openai_common.py  _streaming_common.py  anthropic.py  anthropic_streaming.py  openai_compatible.py  openai_compatible_streaming.py  proxy.py
src/llm_usage/core/: __init__.py  compare.py  db.py  diagnostics.py  models.py  pricing.py  pricing_loader.py  providers.py  quality.py  recommend.py  recording.py  spend.py
src/llm_usage/core/db/: __init__.py  models.py  session.py
src/llm_usage/core/pricing_data/: README.md  __init__.py  prices.json  pricing_overrides.json
src/llm_usage/core/quality_data/: README.md  __init__.py  model_quality.json
src/llm_usage/mcp/: __init__.py  server.py
src/llm_usage/migrations/versions/: 278ba38a2efd_initial_schema.py  a7c2e1b9d4f8_add_pricing_tier.py  e4958a730a6c_add_quality_snapshot.py
tests/: conftest.py  test_bootstrap.py  test_capture_anthropic.py  test_capture_anthropic_streaming.py  test_capture_openai_compat_routes.py  test_capture_openai_compat_streaming.py  test_capture_openai_compat_streaming_routes.py  test_capture_openai_compatible.py  test_capture_proxy.py  test_cli_about.py  test_cli_compare.py  test_cli_models.py  test_cli_providers.py  test_cli_recommend.py  test_cli_render.py  test_cli_root.py  test_cli_spend.py  test_cli_status.py  test_compare_providers.py  test_config.py  test_diagnostics.py  test_family_root.py  test_mcp_server.py  test_mcp_types.py  test_migrations.py  test_models.py  test_prices_json.py  test_pricing.py  test_pricing_drift.py  test_pricing_loader.py  test_pricing_upsert.py  test_providers.py  test_proxy_banner.py  test_quality.py  test_query_pricing.py  test_query_spend.py  test_read_path_tools.py  test_recommend.py  test_recommend_provider.py  test_recording.py  (+3 more)
tests/fixtures/sample_responses/: anthropic_messages_ok.json  anthropic_messages_stream_error_mid.sse  anthropic_messages_stream_ok.sse  anthropic_messages_stream_only_message_start.sse  deepseek_chat_completions_ok.json  deepseek_chat_completions_stream_ok.sse  openai_chat_completions_ok.json  openai_chat_completions_stream_no_usage.sse  openai_chat_completions_stream_ok.sse  qwen_chat_completions_ok.json  qwen_chat_completions_stream_ok.sse
